# bilicong

./: LICENSE  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: build_win.yml
src/: main.js  style.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: adb.rs  entries.rs  lib.rs  main.rs  mix.rs  mix_media.rs  tauri_anyhow_wrap.rs  temp_path.rs  utils.rs
src-tauri/src/adb/: command.rs
src-tauri/src/entries/: fallback.rs  v1_episode.rs  v1_video.rs  v26_avid.rs  v26_bvid.rs  v26_ep_avid.rs  v26_ep_bvid.rs
src/components/: IconWithMsg.vue  MsgFooter.vue  ProgressBar.vue
src/router/: index.js
src/services/: api.js
src/views/: HomeView.vue  ListView.vue  PullView.vue
