[package]
name = "bilicong_backend"
version = "0.1.1"
edition = "2024"

[profile.release]
lto = true
strip = true
codegen-units = 1
panic = "abort"

[lib]
name = "bilicong_backend_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
anyhow = "1.0.102"
blake3 = "1.8.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-dialog = "2.6.0"
tauri-plugin-opener = "2.5.3"
tokio = { version = "1.50.0", features = ["full"] }
